@@ -4433,7 +4433,7 @@ Statuses are stored in ascending-order with respect to their IDs."
 	    twittering-web-host (twittering-percent-encode query-string))))
 
 ;;;;
-;;;; Comparison of status IDs
+;;;; Utility of status IDs
 ;;;;
 
 (defun twittering-status-id< (id1 id2)
@@ -4446,6 +4446,80 @@ Statuses are stored in ascending-order with respect to their IDs."
 
 (defun twittering-status-id= (id1 id2)
   (equal id1 id2))
+
+(defun twittering-snowflake-epoch-time ()
+  "Return the epoch time of Snowflake."
+  (require 'calc)
+  (let ((epoch-str
+	 ;; This corresponds to 2010-11-04 01:42:54+00:00 in RFC3339.
+	 ;; The value comes from the following page.
+	 ;; https://github.com/twitter/snowflake/blob/6d4634aa490de26e22425538291fe0a03071a170/src/main/scala/com/twitter/service/snowflake/IdWorker.scala#L22
+	 ;; 22    val twepoch = 1288834974657L
+	 "1288834974657"))
+    (let ((str
+	   (calc-eval `(,(concat "floor(10#" epoch-str "/10#1000)")
+			calc-word-size 64 calc-number-radix 16)))
+	  (milisec-str
+	   (calc-eval `(,(concat "10#" epoch-str "%10#1000")
+			calc-word-size 64 calc-number-radix 10))))
+      (mapcar (lambda (s) (string-to-number s 16))
+	      `(,(substring str 3 7) ,(substring str 7)
+		,milisec-str)))))
+
+(defun twittering-id-to-time (id)
+  "Return the time corresonding to ID generated by Snowflake.
+If ID is a string consisting of 12 or more digits, return the corresponding
+time in Emacs internal representation the same as `encode-time'.
+Otherwise, return nil.
+
+This is because ID consisting of 11 or less digits may not be generated
+by Snowflake."
+  (require 'calc)
+  (cond
+   ((not (stringp id))
+    nil)
+   ((< (length id) 12)
+    ;; The given ID may not be generated by Snowflake.
+    ;;
+    ;; The first tweet in the example response of
+    ;; https://dev.twitter.com/docs/api/1/get/statuses/home_timeline
+    ;; has "18700887835" as the ID.
+    ;; Assuming that it is generated by Snowflake, it corresponds to
+    ;; "2010-11-04 01:42:58+00:00".
+    ;; However, the created_at is "Fri Jul 16 16:58:46 +0000 2010".
+    ;; It can be confirmed at http://twitter.com/cindyli/status/18700887835 .
+    ;;
+    ;; Therefore we can not suppose that an ID is generated by Snowflake
+    ;; if the ID consists of 11-digits.
+    ;; Assuming that an ID reaches 10^11 before Snowflake is turned on at
+    ;; Nov 04 2010, the average number of tweets per day will exceed
+    ;; 533 million.
+    ;; ( 10^11 - 18,700,887,835 > 80,000,000,000
+    ;;   80 billion / 5 month (from Jul 16 to Nov 4) > 533 million / day )
+    ;;
+    ;; It is impossible.
+    ;; So, I assume that an ID is generated by Snowflake if the ID consists of
+    ;; 12 or more digits.
+    ;; The first ID with 12-digits, 100,000,000,000 (10^11), corresponds to
+    ;; 2010-11-04 01:43:17+00:00.
+    nil)
+   (t
+    (let* ((epoch (twittering-snowflake-epoch-time))
+	   (str (calc-eval
+		 `(,(format "floor(rsh(10#%s,22)/1000)" id)
+		   calc-word-size 64 calc-number-radix 16))))
+      (when (string-match "^16#\\([[:xdigit:]]+\\)" str)
+	(let* ((hex-str (match-string 1 str))
+	       (hex-str
+		(if (< (length hex-str) 4)
+		    (concat "0000" hex-str)
+		  hex-str)))
+	  (time-add epoch
+		    `(,(string-to-number
+			(substring hex-str 0 (- (length hex-str) 4)) 16)
+		      ,(string-to-number
+			(substring hex-str (- (length hex-str) 4)) 16)
+		      ))))))))
 
 ;;;;
 ;;;; Process info
