@@ -99,6 +99,12 @@
 	(twittering-mode-map): bind "R" to the new function
 	`twittering-toggle-or-retrieve-replied-statuses'.
 
+	* twittering-mode.el: Add a new function `twittering-id-to-time'
+	that extracts a corresponding time from an ID generated by
+	Snowflake.
+	(twittering-snowflake-epoch-time): new function.
+	(twittering-id-to-time): new function.
+
 2012-03-04  Tadashi MATSUO  <tad@mymail.twin.jp>
 
 	* twittering-mode.el: Fix the escape of a query string in a search
